--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pyparted
-url = https://github.com/dcantrell/pyparted/releases/download/v3.11.7/pyparted-3.11.7.tar.gz
+url = https://github.com/dcantrell/pyparted/releases/download/v3.12.0/pyparted-3.12.0.tar.gz
 archives = 
 giturl = https://github.com/dcantrell/pyparted.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
